<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_sneakers_in_cart"
        android:textStyle="bold"
        android:textColor="@color/color_primary"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_details_container"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Text View below RecyclerView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orderTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/order_details"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sub_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textSize="20sp"
            android:text="@string/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderTitleText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sub_total_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            tools:text="$ 456"
            app:layout_constraintStart_toEndOf="@id/sub_total_text"
            app:layout_constraintTop_toBottomOf="@id/orderTitleText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tax_n_charges_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="Taxes and Charges :"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_total_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tax_n_charges_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/_40"
            app:layout_constraintStart_toEndOf="@id/tax_n_charges_text"
            app:layout_constraintTop_toBottomOf="@id/sub_total_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tax_n_charges_text"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/total_amount_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$ 496"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/color_primary"
            app:layout_constraintStart_toEndOf="@id/total_amount_text"
            app:layout_constraintTop_toBottomOf="@id/tax_n_charges_text"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/roundedCornersColorBtn"
            android:textSize="20sp"
            android:text="$ Check-Out"
            app:backgroundTint="@color/color_primary"
            android:layout_marginVertical="10dp"
            app:layout_constraintStart_toEndOf="@id/total_amount_value_text"
            app:layout_constraintTop_toBottomOf="@id/tax_n_charges_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>