<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sneaker_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintBottom_toTopOf="@id/sneaker_details_cv"
        app:shapeAppearanceOverlay="@style/roundedCorners" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sneaker_details_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_bg"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sneaker_iv">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sneaker_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_primary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sneaker_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loreum_ipsum_txt"
            android:textSize="12sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sneaker_name_tv" />

        <LinearLayout
            android:id="@+id/size_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sneaker_description_tv">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sneaker_size_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/size_uk"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sneaker_name_tv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/size_7_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/size_7"
                app:shapeAppearanceOverlay="@style/roundedCornersSizeBtn"
                app:strokeColor="@color/color_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/size_8_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/size_8"
                app:shapeAppearanceOverlay="@style/roundedCornersSizeBtn"
                app:strokeColor="@color/color_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/size_9_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/size_9"
                app:shapeAppearanceOverlay="@style/roundedCornersSizeBtn"
                app:strokeColor="@color/color_primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_container">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sneaker_color_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/colour"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sneaker_name_tv" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color1_cv"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/color_primary"
                app:cardElevation="0dp"
                app:shapeAppearanceOverlay="@style/roundedCornersColorBtn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/tick_img"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tick"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color2_cv"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/md_theme_dark_secondary"
                app:cardElevation="0dp"
                app:shapeAppearanceOverlay="@style/roundedCornersColorBtn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/tick_img_2"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tick"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/color3_cv"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/md_theme_light_onSecondaryContainer"
                app:cardElevation="0dp"
                app:shapeAppearanceOverlay="@style/roundedCornersColorBtn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/tick_img_3"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tick"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_container">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sneaker_price_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/price"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintTop_toBottomOf="@id/color_container"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sneaker_dollar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="$"
                android:textSize="24sp"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintTop_toBottomOf="@id/color_container"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sneaker_price_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@color/color_primary"
                tools:text="199"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                app:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintTop_toBottomOf="@id/color_container"
                app:layout_constraintStart_toStartOf="parent"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_to_cart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_primary"
                android:text="@string/add_to_cart"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                app:layout_constraintTop_toBottomOf="@id/color_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/roundedCornersSizeBtn"
                />


        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


