<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        tools:layout="@layout/fragment_home" />

    <FrameLayout
        android:id="@+id/bottom_nav_bar_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        style="@style/frameLayoutTheme"
        android:background="@drawable/shadow_bg"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/home_orange_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:src="@drawable/home_orange"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/home_icon_2"
            />

        <ImageView
            android:id="@+id/cart_orange_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:src="@drawable/cart_orange"
            android:layout_marginEnd="60dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/home_icon_2"
            />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cart_white_cv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|center_vertical"
        app:cardCornerRadius="35dp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="60dp"
        app:cardBackgroundColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_white_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cart_white_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cart_white"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cart_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_white_cv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_white_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_white_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_home_white"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/home_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>